# encryptd

./: .changelogrc.js  .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  README.md  RELEASE_NOTES.md  package.json  pnpm-lock.yaml  trigger.json  tsconfig.json
.changeset/: 0.0.2-beta-release.md  config.json  initial-beta-release.md
.github/workflows/: changesets.yml  ci.yml  manual-release-beta.yml  manual-release.yml  release.yml
docs/: api.md  usage.md
rust/: Cargo.toml  index.js
rust/src/: lib.rs
scripts/: generate-changelog.mjs
src/: cli.ts  crypto.ts  index.ts  native.ts  types.ts
src/interfaces/: index.ts
test/: basic.test.ts  main.test.ts
