[package]
name = "encryptd"
version = "0.5.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["default"] }
napi-derive = "2"
aes-gcm = "0.10"
hex = "0.4"
sha2 = "0.10"
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
rand_core = { version = "0.6", features = ["getrandom"] }

[build-dependencies]
napi-build = "2"
